--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 			<a href="https://es.wikipedia.org/wiki/Oktubre">Un link a Oktubre</a><br>
 			<a href="https://es.wikipedia.org/wiki/Luzbelito">Un link a Luzbelito</a>
 			<br>
+			
 		</div>
+		<button>Active</button>
+			<input id="skynet" type="text">
+			<p>Acceso a Skynet</p>
 		<p class="aloha">Otro párrafo suelto. Somos una banda..</p>
 		<p id="ultimo">Bueno, yo soy el último, así que vamos cerrandooo.</p>
 	</body>
