--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
         <p>Goran Ivos Portfolio</p>
         
-            <a href="https://unsplash.com/s/photos/osijek%2C-croatia"><img src="goran-ivos-fIwQ6zTLUEU-unsplash-800x600.jpg"></a>
-            <a href="https://www.apple.com"><img src="goran-ivos-iacpoKgpBAM-unsplash-800x600.jpg"></a>
-            <a href="https://articulo.mercadolibre.com.ar/MLA-902543955-aeropress-aerobie-barista-cafe-cafetera-_JM"><img src="goran-ivos-UL5jaNNoVIY-unsplash-800x600.jpg"></a>
-            <a href="https://freddo.com.ar/"><img src="goran-ivos-2KBGaj7Qzxg-unsplash-800x600.jpg"></a>
-            <a href="https://articulo.mercadolibre.com.ar/MLA-863826353-joystick-atari-2600-100-nuevos-commodore-msx-sinclair--_JM"><img src="goran-ivos-5qBr5fR7YZY-unsplash-800x600.jpg"></a> 
-            <a href="https://unsplash.com/s/photos/kor%C4%8Dula%2C-croatia"><img src="goran-ivos-J0jZalgWh1w-unsplash-800x600.jpg"></a>
-            <a href="https://en.wikipedia.org/wiki/Depth_of_field"><img src="goran-ivos-ZSCBKynQIPM-unsplash-800x600.jpg"></a>
-            <a href="https://es.wikipedia.org/wiki/Profundidad_de_campo"><img src="goran-ivos-h2BwNeVUcv0-unsplash-800x600.jpg"></a>
-            <a href="https://www.jesustovar.es/veteasabertu/propiedad-z-index-profundidad-de-capas-en-css"><img src="goran-ivos-pBM58DUvhds-unsplash-800x600.jpg"></a>
+            <a href="https://unsplash.com/s/photos/osijek%2C-croatia" target="_blank"><img src="goran-ivos-fIwQ6zTLUEU-unsplash-800x600.jpg"></a>
+            <a href="https://www.apple.com" target="_blank"><img src="goran-ivos-iacpoKgpBAM-unsplash-800x600.jpg"></a>
+            <a href="https://articulo.mercadolibre.com.ar/MLA-902543955-aeropress-aerobie-barista-cafe-cafetera-_JM" target="_blank"><img src="goran-ivos-UL5jaNNoVIY-unsplash-800x600.jpg"></a>
+            <a href="https://freddo.com.ar/ target="_blank""><img src="goran-ivos-2KBGaj7Qzxg-unsplash-800x600.jpg"></a>
+            <a href="https://articulo.mercadolibre.com.ar/MLA-863826353-joystick-atari-2600-100-nuevos-commodore-msx-sinclair--_JM" target="_blank"><img src="goran-ivos-5qBr5fR7YZY-unsplash-800x600.jpg"></a> 
+            <a href="https://unsplash.com/s/photos/kor%C4%8Dula%2C-croatia" target="_blank"><img src="goran-ivos-J0jZalgWh1w-unsplash-800x600.jpg"></a>
+            <a href="https://en.wikipedia.org/wiki/Depth_of_field" target="_blank"><img src="goran-ivos-ZSCBKynQIPM-unsplash-800x600.jpg"></a>
+            <a href="https://es.wikipedia.org/wiki/Profundidad_de_campo" target="_blank"><img src="goran-ivos-h2BwNeVUcv0-unsplash-800x600.jpg"></a>
+            <a href="https://www.jesustovar.es/veteasabertu/propiedad-z-index-profundidad-de-capas-en-css" target="_blank"><img src="goran-ivos-pBM58DUvhds-unsplash-800x600.jpg"></a>
     </div>
     <br>
     <div class="credits">
