--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: white;">
     <div id="container">
 
 <!-- Punto 7 - ¿Sabés que le falta a tu página? Un título. 
